# PathTracerV2

./: .gitignore  CMakeLists.txt  main.cpp  shader_compile.bat
assets/shaders/: common.glsl  common_rchit.glsl  common_rgen.glsl  common_rmiss.glsl  layout_rchit.glsl  layout_rgen.glsl  layout_rmiss.glsl  main.rchit  main.rgen  main.rmiss  types.glsl
src/: application.h  fwd.h
src/PathTracer/: PathTracer.h  acceleration_structure.cpp  descriptor.cpp  images.cpp  init.cpp  material.cpp  model.cpp  pipeline.cpp  pool.cpp  raytrace.cpp  sbt.cpp
src/Setup/: Setup.h  device.cpp  init.cpp  instance.cpp  queue.cpp
